--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
     "react-lazyload": "^3.2.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^6.14.0",
     "react-type-animation": "^3.1.0",
     "sort-by": "^1.2.0",
